try decouple ChatSupportEngine, add new ChatSupportService

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,18 @@
   },
   "AllowedHosts": "*",
   "ChatSupportSettings": {
-    "ChatRetryPolicy_InSeconds": 15
+    "PeriodicRun_InSeconds":  5, // this must be always lower than other
+    "ChatSettings": {
+      "MaxRety": 3,
+      "RetryPolicy_InSeconds": 15,
+      "Expired_InSeconds": 60
+    },
+    "ChatQueueSettings": {
+      "Check_InSeconds": 15
+    },
+    "ShiftSettings": {
+      "IsAutoAssign": false,
+      "CheckChange_InSeconds": 60
+    }
   }
 }
