Code cleanup, move ChatSupportService, ChatQueueService, AgentCoordinatorService to separate files

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,14 +7,15 @@
   },
   "AllowedHosts": "*",
   "ChatSupportSettings": {
-    "PeriodicRun_InSeconds":  5, // this must be always lower than other
+    "PeriodicRun_InSeconds":  5, // this must be always lower than other polling settings
     "ChatSettings": {
       "MaxRety": 3,
       "RetryPolicy_InSeconds": 15,
-      "Expired_InSeconds": 60
+      "Expired_InSeconds": 60 // (MaxRety + 1) * RetryPolicy_InSeconds => 3 * 15 = 60secs
     },
     "ChatQueueSettings": {
-      "Check_InSeconds": 15
+      "CheckLive_InSeconds": 15,
+      "CheckExpired_InSeconds": 30
     },
     "ShiftSettings": {
       "IsAutoAssign": false,
