Add shift change functionality

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,8 +18,9 @@
       "CheckExpired_InSeconds": 30
     },
     "ShiftSettings": {
-      "IsAutoAssign": false,
-      "CheckChange_InSeconds": 60
+      "IsAutoAssign": true,
+      "DefaultShift": "Day",
+      "CheckChange_InSeconds": 120
     }
   }
 }
